--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "body-scroll-lock": "^2.6.4",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-infinite-loader": "^1.0.4",
+    "react-infinite-scroller": "^1.2.4",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
