--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "react-scrolllock": "^5.0.0",
+    "react-uuid": "^1.0.2",
     "redux": "^4.0.5",
     "semantic-ui": "^2.4.2",
     "semantic-ui-css": "^2.4.1",
